# clace

./: .gitignore  CMakeLists.txt  CMakePresets.json  clace.cpp  clace.h  readme.md
#old_stuff/: old_board.h  old_movesCacheTest.cpp  old_rayAttacks.h  old_user_interface.h
board/: attackBoards.h  board.cpp  board.h  checkStatus.cpp  checkStatus.h  piece.h
cache/: transpositionTable.h  zobrist.h
common/: bitwise.h  boardDef.h  constants.h  defines.h  structures.h  types.h
docs/: Performance.xlsx  notes.txt
engine/: ab_engine.h  abstractEngine.h  abstract_engine.h  alphaBetaEngine.h  bf_engine.h  bruteForceEngine.h  iengine.h  r_engine.cpp  r_engine.h  randomEngine.h
evaluation/: basicEvaluator.h  evaluator.h  ievaluator.h  phase.h
game/: game.cpp  game.h  gameRunner.h  player.cpp  player.h  statistics.cpp  statistics.h
io/: userInterface.h
move/: move.cpp  move.h  movesCache.h  movesCacheNew.h  movesCalculation.h  movesGenerator.h  rayAttacks.h  rollback.cpp  rollback.h
movesCalculation/: movesCalculation.h  rayAttacks.h  staticAttacks.h
old_stuff/: old_board.h  old_rayAttacks.h
perft/: perft.cpp  perft.h  result.cpp  result.h
tests/: abEngineTest.cpp  arrayPoolTest.cpp  bfEngineTest.cpp  bitwiseTest.cpp  boardPerformanceTest.cpp  boardTest.cpp  boardUtilsTest.cpp  evaluationTest.cpp  fenTest.cpp  gameTest.cpp  moveTest.cpp  movesCacheNewTest.cpp  movesCacheTest.cpp  movesCalculationTest.cpp  movesGeneratorTest.cpp  performanceDebugTest.cpp  performanceEngineTest.cpp  performancePerftTest.cpp  performanceReleaseTest.cpp  perftTest.cpp  phaseTest.cpp  pieceHelperTest.cpp  playerTest.cpp  positionsTest.cpp  rayAttacksTest.cpp  rollbackTest.cpp  testUtils.h  transpositionTableTest.cpp  zobristTest.cpp
uci/: movesProcessor.h  uciProcessor.h
ui/: userInterface.h
ui/gui/: button.cpp  button.h  gui.cpp  gui.h  guiConstants.h  igui.h  panel.cpp  panel.h  utils.h
utils/: BoardUtils.cpp  arrayPool.h  boardUtils.cpp  boardUtils.h  castlingHelper.h  castlingInfoHelper.h  fen.h  logger.h  messenger.h  movePool.h  number.h  pieceHelper.h  positions.h  testUtils.h  toString.h  utils.h  vectorPool.h
